--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluentui_icons: ^1.0.0
   gap: ^2.0.0
+  date_picker_timeline: ^1.2.3
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
